--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,9 +1,12 @@
 name: release-please
-# !STARTERCONF Uncomment these 4 lines to activate release on push main.
 on:
-  push:
-    branches:
-      - main
+  # !STARTERCONF Choose your preferred event
+  # !Option 1: Manual Trigger from GitHub
+  workflow_dispatch:
+  # !Option 2: Release on every push on main branch
+  # push:
+  #   branches:
+  #     - main
 jobs:
   release-please:
     runs-on: ubuntu-latest
